# sofomo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  tox.ini
account/: apps.py  models.py  serializers.py  urls.py  views.py
api/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20210311_1004.py  0003_auto_20210311_1010.py  0004_auto_20210311_1033.py
sofomo/: asgi.py  s.py  settings.py  urls.py  wsgi.py
sofomo/settings/: base.py  development.py  production.py  testing.py
